hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tgeneric.php.exp
File "tgeneric.php", line 7, characters 10-14:
Invalid return type (Typing[4110])
File "tgeneric.php", line 6, characters 27-32:
Expected Terase
File "tgeneric.php", line 4, characters 17-23:
But got dynamic
File "tgeneric.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
File "tgeneric.php", line 10, characters 33-38:
Expected Treify
File "tgeneric.php", line 4, characters 17-23:
But got dynamic
